--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.laokou</groupId>
     <artifactId>KCloud-Platform-Alibaba</artifactId>
-    <version>3.2.4</version>
+    <version>3.2.5</version>
     <packaging>pom</packaging>
     <modules>
         <module>laokou-common</module>
@@ -33,7 +33,7 @@
     <description>一个企业级微服务架构的云服务多租户SaaS平台</description>
     <url>https://koushenhai.github.io/KCloud-Platform-Alibaba</url>
     <properties>
-        <laokou.version>3.2.4</laokou.version>
+        <laokou.version>3.2.5</laokou.version>
         <java.version>21</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>${java.version}</maven.compiler.source>
@@ -42,7 +42,7 @@
         <spring-boot-maven-plugin.version>3.2.4</spring-boot-maven-plugin.version>
         <maven-surefire-plugin.version>3.2.5</maven-surefire-plugin.version>
         <!--spring-boot版本-->
-        <spring-boot.version>3.2.4</spring-boot.version>
+        <spring-boot.version>3.2.5-SNAPSHOT</spring-boot.version>
         <!--spring-cloud版本-->
         <spring-cloud.version>2023.0.0</spring-cloud.version>
         <!--spring-framework版本-->
@@ -330,8 +330,8 @@
                 <configuration>
                     <!--备份版本-->
                     <generateBackupPoms>true</generateBackupPoms>
-                    <newVersion>3.2.5</newVersion>
-                    <oldVersion>3.2.4</oldVersion>
+                    <newVersion>3.2.6</newVersion>
+                    <oldVersion>3.2.5</oldVersion>
                 </configuration>
             </plugin>
             <plugin>
