--- a/laokou-test/laokou-test-container/laokou-test-container-dubbo/laokou-test-container-dubbo-provider/src/main/resources/application.yml
+++ b/laokou-test/laokou-test-container/laokou-test-container-dubbo/laokou-test-container-dubbo-provider/src/main/resources/application.yml
@@ -15,7 +15,7 @@ dubbo:
     address: nacos://@NACOS-DISCOVERY-ADDRESS@
     username: @NACOS-USERNAME@
     password: @NACOS-PASSWORD@
-    group: LAOKOU_GROUP
+    group: TEST_GROUP
     parameters:
       namespace: @NACOS-NAMESPACE@
       register-consumer-url: true
