--- a/laokou-service/laokou-admin/laokou-admin-infrastructure/pom.xml
+++ b/laokou-service/laokou-admin/laokou-admin-infrastructure/pom.xml
@@ -97,7 +97,7 @@
         </dependency>
         <dependency>
             <groupId>org.laokou</groupId>
-            <artifactId>laokou-common-dynamic-router</artifactId>
+            <artifactId>laokou-common-nacos</artifactId>
         </dependency>
         <dependency>
             <groupId>org.laokou</groupId>
