--- a/doc/deploy/elasticsearch8/config/elasticsearch.yml
+++ b/doc/deploy/elasticsearch8/config/elasticsearch.yml
@@ -8,6 +8,16 @@ discovery.type: single-node
 # 内存交换的选项，官网建议为true
 bootstrap.memory_lock: true
 xpack.security.enabled: true
-xpack.security.http.ssl.enabled: false
-xpack.security.transport.ssl.enabled: false
+xpack.security.transport.ssl.enabled: true
+xpack.security.transport.ssl.keystore.type: PKCS12
+xpack.security.transport.ssl.verification_mode: certificate
+xpack.security.transport.ssl.keystore.path: certs/elastic-certificates.p12
+xpack.security.transport.ssl.truststore.path: certs/elastic-certificates.p12
+xpack.security.transport.ssl.truststore.type: PKCS12
+xpack.security.http.ssl.enabled: true
+xpack.security.http.ssl.keystore.type: PKCS12
+xpack.security.http.ssl.keystore.path: certs/elastic-certificates.p12
+xpack.security.http.ssl.truststore.path:  certs/elastic-certificates.p12
+xpack.security.http.ssl.verification_mode: certificate
+xpack.security.http.ssl.truststore.type: PKCS12
 http.cors.allow-headers: Authorization
