docs: 删除laokou-release

--- a/doc/push/pom.xml
+++ b/doc/push/pom.xml
@@ -24,7 +24,7 @@
         <groupId>org.laokou</groupId>
         <artifactId>KCloud-Platform-Alibaba</artifactId>
         <version>3.2.5</version>
-        <relativePath>../pom.xml</relativePath>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.github.koushenhai</groupId>
