--- a/doc/deploy/rocketmq5/broker/conf/broker.conf
+++ b/doc/deploy/rocketmq5/broker/conf/broker.conf
@@ -20,5 +20,6 @@ deleteWhen = 04
 fileReservedTime = 48
 brokerRole = ASYNC_MASTER
 flushDiskType = ASYNC_FLUSH
-namesrvAddr=0.0.0.0:9876
-brokerIP1=0.0.0.0
+namesrvAddr=127.0.0.1:9876
+brokerIP1=127.0.0.1
+autoCreateTopicEnable = true
