--- a/doc/deploy/docker-compose.yml
+++ b/doc/deploy/docker-compose.yml
@@ -118,7 +118,7 @@ services:
       - "10911:10911"
       - "10909:10909"
       - "10912:10912"
-    command: sh mqbroker -n 0.0.0.0:9876 -c /home/rocketmq/conf/broker.conf autoCreateTopicEnable=true
+    command: sh mqbroker -n 127.0.0.1:9876 -c /home/rocketmq/conf/broker.conf
     environment:
       - JAVA_OPT_EXT=-server -Xmx256m -Xms256m -Xmn128m
       - TZ=Asia/Shanghai
