style: rocketmq必须指定IP才能自动创建Topic

--- a/doc/deploy/docker-compose.yml
+++ b/doc/deploy/docker-compose.yml
@@ -93,7 +93,7 @@ services:
     depends_on:
       - zookeeper
   rocketmq-namesrv:
-    image: apache/rocketmq:5.1.1
+    image: apache/rocketmq:5.2.0
     container_name: rocketmq-namesrv
     # 保持容器在没有守护程序的情况下运行
     tty: true
@@ -107,7 +107,7 @@ services:
       - TZ=Asia/Shanghai
     network_mode: bridge
   rocketmq-broker:
-    image: apache/rocketmq:5.1.1
+    image: apache/rocketmq:5.2.0
     container_name: rocketmq-broker
     # 保持容器在没有守护程序的情况下运行
     tty: true
@@ -118,7 +118,7 @@ services:
       - "10911:10911"
       - "10909:10909"
       - "10912:10912"
-    command: sh mqbroker -n 127.0.0.1:9876 -c /home/rocketmq/conf/broker.conf
+    command: sh mqbroker -n 192.168.30.1:9876 -c /home/rocketmq/conf/broker.conf autoCreateTopicEnable=true
     environment:
       - JAVA_OPT_EXT=-server -Xmx256m -Xms256m -Xmn128m
       - TZ=Asia/Shanghai
