--- a/laokou-test/laokou-test-container/pom.xml
+++ b/laokou-test/laokou-test-container/pom.xml
@@ -16,6 +16,7 @@
     <modules>
         <module>laokou-test-container-spring-boot</module>
         <module>laokou-test-container-dubbo</module>
+        <module>laokou-test-container-rocketmq</module>
     </modules>
 
 </project>
