style: 提交前端代码

--- a/laokou-ui/public/platform-config.json
+++ b/laokou-ui/public/platform-config.json
@@ -1,6 +1,6 @@
 {
   "Version": "5.3.0",
-  "Title": "PureAdmin",
+  "Title": "老寇云平台",
   "FixedHeader": true,
   "HiddenSideBar": false,
   "MultiTagsCache": false,
