--- a/laokou-ui/package.json
+++ b/laokou-ui/package.json
@@ -68,6 +68,7 @@
     "qs": "^6.12.0",
     "responsive-storage": "^2.2.0",
     "sortablejs": "^1.15.2",
+    "uuid": "^9.0.1",
     "vue": "^3.4.21",
     "vue-i18n": "^9.10.2",
     "vue-router": "^4.3.0",
