--- a/laokou-ui/package.json
+++ b/laokou-ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ruoyi-antdv",
+  "name": "KCloud-Antdv-Alibaba",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -13,18 +13,25 @@
   "dependencies": {
     "ant-design-vue": "^1.7.8",
     "axios": "^0.24.0",
+    "compression-webpack-plugin": "^6.1.1",
     "core-js": "^3.19.2",
     "echarts": "^5.2.2",
     "file-saver": "^2.0.5",
     "highlight.js": "9.18.5",
+    "js-md5": "^0.7.3",
+    "jsencrypt": "^3.2.1",
     "lodash.clonedeep": "^4.5.0",
     "lodash.get": "^4.4.2",
     "lodash.pick": "^4.4.0",
+    "mavon-editor": "^2.10.4",
     "md5": "^2.3.0",
     "moment": "^2.29.1",
     "nprogress": "^0.2.0",
     "qs": "^6.10.1",
+    "rsocket-core": "^1.0.0-alpha.3",
+    "rsocket-websocket-client": "^1.0.0-alpha.3",
     "screenfull": "5.0.2",
+    "spark-md5": "^3.0.2",
     "store": "^2.0.12",
     "vue": "^2.6.14",
     "vue-clipboard2": "^0.3.3",
@@ -32,6 +39,7 @@
     "vue-copy-to-clipboard": "^1.0.3",
     "vue-cropper": "0.5.8",
     "vue-i18n": "^8.24.2",
+    "vue-json-viewer": "^2.2.22",
     "vue-router": "^3.5.1",
     "vue-svg-component-runtime": "^1.0.1",
     "vuex": "^3.6.2",
@@ -40,7 +48,6 @@
   "devDependencies": {
     "@ant-design/colors": "^6.0.0",
     "@vue/cli-plugin-babel": "^4.0.4",
-    "@vue/cli-plugin-eslint": "^4.0.4",
     "@vue/cli-plugin-router": "^4.0.4",
     "@vue/cli-plugin-unit-jest": "^4.0.4",
     "@vue/cli-plugin-vuex": "^4.0.4",
