--- a/laokou-ui/package.json
+++ b/laokou-ui/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "KCloud-Antdv-Alibaba",
-  "version": "1.0.0",
+  "name": "老寇云平台",
+  "version": "3.2.5",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -12,9 +12,9 @@
   },
   "dependencies": {
     "ant-design-vue": "^1.7.8",
+    "axios": "^0.24.0",
     "compression-webpack-plugin": "^6.1.1",
-    "axios": "^0.28.0",
-    "core-js": "^3.36.1",
+    "core-js": "^3.19.2",
     "echarts": "^5.2.2",
     "file-saver": "^2.0.5",
     "highlight.js": "9.18.5",
@@ -57,10 +57,10 @@
     "babel-eslint": "^10.0.1",
     "babel-plugin-import": "^1.12.2",
     "babel-plugin-transform-remove-console": "^6.9.4",
-    "eslint": "^9.0.0",
-    "eslint-plugin-html": "^8.0.0",
+    "eslint": "^5.16.0",
+    "eslint-plugin-html": "^5.0.0",
     "eslint-plugin-vue": "^5.2.3",
-    "git-revision-webpack-plugin": "^5.0.0",
+    "git-revision-webpack-plugin": "^3.0.6",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "opencollective": "^1.0.3",
