--- a/laokou-service/laokou-distributed-identifier/laokou-distributed-identifier-infrastructure/pom.xml
+++ b/laokou-service/laokou-distributed-identifier/laokou-distributed-identifier-infrastructure/pom.xml
@@ -38,6 +38,22 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-undertow</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.laokou</groupId>
+      <artifactId>laokou-common-nacos</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.laokou</groupId>
+      <artifactId>laokou-common-secret</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.laokou</groupId>
+      <artifactId>laokou-common-log4j2</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.laokou</groupId>
+      <artifactId>laokou-common-trace</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
