--- a/laokou-service/laokou-iot/laokou-iot-infrastructure/pom.xml
+++ b/laokou-service/laokou-iot/laokou-iot-infrastructure/pom.xml
@@ -89,6 +89,10 @@
         </exclusion>
       </exclusions>
     </dependency>
+    <dependency>
+      <groupId>org.laokou</groupId>
+      <artifactId>laokou-common-openapi-doc</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
