--- a/laokou-common/laokou-common-openfeign/pom.xml
+++ b/laokou-common/laokou-common-openfeign/pom.xml
@@ -91,6 +91,10 @@
       <groupId>org.laokou</groupId>
       <artifactId>laokou-distributed-identifier-client</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.laokou</groupId>
+      <artifactId>laokou-common-secret</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
