feat: 所有ID生成都是OpenFeign调用分布式ID服务

--- a/laokou-common/laokou-common-log/pom.xml
+++ b/laokou-common/laokou-common-log/pom.xml
@@ -21,6 +21,11 @@
       <artifactId>jakarta.servlet-api</artifactId>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>org.laokou</groupId>
+      <artifactId>laokou-common-openfeign</artifactId>
+      <optional>true</optional>
+    </dependency>
   </dependencies>
 
 </project>
