--- a/laokou-service/laokou-admin/laokou-admin-start/src/main/resources/application.yml
+++ b/laokou-service/laokou-admin/laokou-admin-start/src/main/resources/application.yml
@@ -151,7 +151,7 @@ spring:
     loadbalancer:
       nacos:
         enabled: true
-    # 解决集成sentinel，openfeign启动报错，官方下个版本修复
+    # OpenFeign配置
     openfeign:
       http2client:
         enabled: false
