--- a/laokou-service/laokou-generator/laokou-generator-infrastructure/pom.xml
+++ b/laokou-service/laokou-generator/laokou-generator-infrastructure/pom.xml
@@ -53,6 +53,10 @@
         </exclusion>
       </exclusions>
     </dependency>
+    <dependency>
+      <groupId>org.laokou</groupId>
+      <artifactId>laokou-common-openfeign</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
