--- a/laokou-service/laokou-iot/laokou-iot-infrastructure/pom.xml
+++ b/laokou-service/laokou-iot/laokou-iot-infrastructure/pom.xml
@@ -93,6 +93,10 @@
       <groupId>org.laokou</groupId>
       <artifactId>laokou-common-openapi-doc</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.laokou</groupId>
+      <artifactId>laokou-common-openfeign</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
