--- a/laokou-service/laokou-iot/laokou-iot-start/src/main/resources/application.yml
+++ b/laokou-service/laokou-iot/laokou-iot-start/src/main/resources/application.yml
@@ -128,10 +128,41 @@ spring:
           # 连接池最小空间连接
           min-idle: 200
   cloud:
-    # loadbalancer
+    # Loadbalancer配置
     loadbalancer:
       nacos:
         enabled: true
+    # OpenFeign配置
+    openfeign:
+      http2client:
+        enabled: false
+      compression:
+        response:
+          enabled: false
+        request:
+          enabled: false
+      # FeignAutoConfiguration、OkHttpFeignLoadBalancerConfiguration、OkHttpClient#getClient、FeignClientProperties、OptionsFactoryBean#getObject
+      # 在BeanFactory调用getBean()时，不是调用getBean，而是调用getObject(),因此，getObject()相当于代理了getBean(),而且getObject()对Options初始化，是直接从openfeign.default获取配置值的
+      okhttp:
+        enabled: true
+      circuitbreaker:
+        enabled: true
+      httpclient:
+        hc5:
+          enabled: false
+        disable-ssl-validation: true
+        max-connections: 500
+        time-to-live: 10
+        time-to-live-unit: minutes
+        ok-http:
+          read-timeout: 120s
+      client:
+        config:
+          default:
+            connectTimeout: 120000 #连接超时
+            readTimeout: 120000 #读取超时
+            logger-level: none
+      lazy-attributes-resolution: true
     inetutils:
       ignored-interfaces:
         - docker0
@@ -206,3 +237,17 @@ rocketmq:
   name-server: rocketmq-namesrv:9876
   consumer:
     pull-batch-size: 32
+
+# Feign配置
+feign:
+  sentinel:
+    enabled: true
+    default-rule: default
+    rules:
+      # https://sentinelguard.io/zh-cn/docs/circuit-breaking.html
+      default:
+        - grade: 2 # 异常数策略
+          count: 1 # 异常数模式下为对应的阈值
+          timeWindow: 30 # 熔断时长，单位为 s（经过熔断时长后熔断器会进入探测恢复状态（HALF-OPEN 状态），若接下来的一个请求成功完成（没有错误）则结束熔断，否则会再次被熔断。ERROR_COUNT）
+          statIntervalMs: 1000 # 统计时长（单位为 ms），如 60*1000 代表分钟级（1.8.0 引入）
+          minRequestAmount: 5 # 熔断触发的最小请求数，请求数小于该值时即使异常比率超出阈值也不会熔断
