--- a/laokou-common/laokou-common-crypto/pom.xml
+++ b/laokou-common/laokou-common-crypto/pom.xml
@@ -48,16 +48,19 @@
     <dependency>
       <groupId>com.github.ulisesbocchio</groupId>
       <artifactId>jasypt-spring-boot-starter</artifactId>
+      <optional>true</optional>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.laokou</groupId>
       <artifactId>laokou-common-log4j2</artifactId>
+      <optional>true</optional>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.laokou</groupId>
       <artifactId>laokou-common-test</artifactId>
+      <optional>true</optional>
       <scope>test</scope>
     </dependency>
   </dependencies>
