feat: 提交代码，增加vertx代码

--- a/laokou-common/laokou-common-mqtt-client/laokou-common-vertx-mqtt-client/pom.xml
+++ b/laokou-common/laokou-common-mqtt-client/laokou-common-vertx-mqtt-client/pom.xml
@@ -11,4 +11,27 @@
 
   <artifactId>laokou-common-vertx-mqtt-client</artifactId>
 
+  <dependencies>
+    <dependency>
+      <groupId>io.vertx</groupId>
+      <artifactId>vertx-mqtt</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-tomcat</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.laokou</groupId>
+      <artifactId>laokou-common-core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.laokou</groupId>
+      <artifactId>laokou-common-log4j2</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.laokou</groupId>
+      <artifactId>laokou-common-reactor</artifactId>
+    </dependency>
+  </dependencies>
+
 </project>
