--- a/laokou-common/laokou-common-openfeign/src/test/resources/bootstrap.yml
+++ b/laokou-common/laokou-common-openfeign/src/test/resources/bootstrap.yml
@@ -19,17 +19,17 @@ spring:
     nacos:
       discovery:
         server-addr: nacos:8848
-        namespace: public
+        namespace: a61abd4c-ef96-42a5-99a1-616adee531f3
         cluster-name: laokou-cluster
-        group: DEFAULT_GROUP
+        group: LAOKOU_GROUP
       config:
         server-addr: nacos:8848
         # https://github.com/alibaba/spring-cloud-alibaba/blob/2021.x/spring-cloud-alibaba-docs/src/main/asciidoc-zh/nacos-config.adoc
-        namespace: public
+        namespace: a61abd4c-ef96-42a5-99a1-616adee531f3
         cluster-name: laokou-cluster
         # 指定读取的文件格式
         file-extension: yaml
-        group: DEFAULT_GROUP
+        group: LAOKOU_GROUP
         refresh-enabled: true
       username: nacos
       password: nacos
