--- a/laokou-common/laokou-common-bom/pom.xml
+++ b/laokou-common/laokou-common-bom/pom.xml
@@ -185,11 +185,18 @@
     <wiremock.version>4.0.0-beta.2</wiremock.version>
     <!--commons-net版本-->
     <commons-net.version>3.11.1</commons-net.version>
+    <!--vertx-mqtt版本-->
+    <vertx-mqtt.version>4.5.14</vertx-mqtt.version>
   </properties>
 
   <!-- 定义全局jar版本,模块使用需要再次引入但不用写版本号 -->
   <dependencyManagement>
     <dependencies>
+      <dependency>
+        <groupId>io.vertx</groupId>
+        <artifactId>vertx-mqtt</artifactId>
+        <version>${vertx-mqtt.version}</version>
+      </dependency>
       <dependency>
         <groupId>commons-net</groupId>
         <artifactId>commons-net</artifactId>
