--- a/doc/deploy/docker-compose/docker-compose.yml
+++ b/doc/deploy/docker-compose/docker-compose.yml
@@ -14,6 +14,26 @@
 #  * limitations under the License.
 #  */
 services:
+  mysql:
+    image: mysql:9.3
+    container_name: mysql
+    # 保持容器在没有守护程序的情况下运行
+    tty: true
+    restart: always
+    privileged: true
+    ports:
+      - "3306:3306"
+    command:
+      --character-set-server=utf8mb4
+      --collation-server=utf8mb4_general_ci
+      --lower-case-table-names=1
+    volumes:
+      - ./mysql9/data:/var/lib/mysql
+      - ./mysql9/conf/my.cnf:/etc/mysql/my.cnf
+      - ./mysql9/logs:/var/log/mysql
+    environment:
+      - MYSQL_ROOT_PASSWORD=laokou123
+      - TZ=Asia/Shanghai
   seata:
     image: registry.cn-shenzhen.aliyuncs.com/koushenhai/laokou-seata:3.5.0
     container_name: seata
