--- a/laokou-service/laokou-distributed-identifier/laokou-distributed-identifier-start/pom.xml
+++ b/laokou-service/laokou-distributed-identifier/laokou-distributed-identifier-start/pom.xml
@@ -16,6 +16,11 @@
       <groupId>org.laokou</groupId>
       <artifactId>laokou-distributed-identifier-adapter</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.laokou</groupId>
+      <artifactId>laokou-common-test</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
 </project>
