--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -37,6 +37,7 @@ jobs:
             ./laokou-common/laokou-common-crypto/target/site/jacoco/jacoco.xml,
             ./laokou-common/laokou-common-i18n/target/site/jacoco/jacoco.xml,
             ./laokou-common/laokou-common-xss/target/site/jacoco/jacoco.xml,
+            ./laokou-common/laokou-common-csv/target/site/jacoco/jacoco.xml,
             ./laokou-common/laokou-common-excel/target/site/jacoco/jacoco.xml,
             ./laokou-common/laokou-common-nacos/target/site/jacoco/jacoco.xml,
             ./laokou-common/laokou-common-shardingsphere/target/site/jacoco/jacoco.xml,
@@ -53,7 +54,7 @@ jobs:
             ./laokou-service/laokou-generator/laokou-generator-start/target/site/jacoco/jacoco.xml,
             ./laokou-service/laokou-logstash/laokou-logstash-start/target/site/jacoco/jacoco.xml,
             ./laokou-service/laokou-auth/laokou-auth-domain/target/site/jacoco/jacoco.xml,
-            ./laokou-service/laokou-auth/laokou-auth-app/target/site/jacoco/jacoco.xml
+            ./laokou-service/laokou-auth/laokou-auth-app/target/site/jacoco/jacoco.xml,
             ./laokou-service/laokou-distributed-identifier/laokou-distributed-identifier-start/target/site/jacoco/jacoco.xml
           token: ${{ secrets.CODECOV_TOKEN }}
       - name: Build with Maven
