--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -43,6 +43,7 @@ jobs:
             ./laokou-common/laokou-common-shardingsphere/target/site/jacoco/jacoco.xml,
             ./laokou-common/laokou-common-sensitive/target/site/jacoco/jacoco.xml,
             ./laokou-common/laokou-common-ftp/target/site/jacoco/jacoco.xml,
+            ./laokou-common/laokou-common-rabbitmq/target/site/jacoco/jacoco.xml,
             ./laokou-common/laokou-common-elasticsearch/target/site/jacoco/jacoco.xml,
             ./laokou-common/laokou-common-openfeign/target/site/jacoco/jacoco.xml,
             ./laokou-common/laokou-common-dubbo/target/site/jacoco/jacoco.xml,
