feat: 增加rabbitmq测试代码

--- a/laokou-common/laokou-common-rabbitmq/src/test/resources/application.yml
+++ b/laokou-common/laokou-common-rabbitmq/src/test/resources/application.yml
@@ -12,3 +12,12 @@ spring:
     username: root
     password: laokou123
     virtual-host: /
+    listener:
+      direct:
+        acknowledge-mode: manual
+        retry:
+          enabled: true
+      simple:
+        acknowledge-mode: manual
+        retry:
+          enabled: true
