feat: 增加mqtt server和相关的测试用例

--- a/laokou-service/laokou-mqtt/laokou-mqtt-adapter/pom.xml
+++ b/laokou-service/laokou-mqtt/laokou-mqtt-adapter/pom.xml
@@ -11,4 +11,11 @@
 
   <artifactId>laokou-mqtt-adapter</artifactId>
 
+  <dependencies>
+    <dependency>
+      <groupId>org.laokou</groupId>
+      <artifactId>laokou-mqtt-app</artifactId>
+    </dependency>
+  </dependencies>
+
 </project>
