--- a/laokou-service/laokou-mqtt/laokou-mqtt-domain/pom.xml
+++ b/laokou-service/laokou-mqtt/laokou-mqtt-domain/pom.xml
@@ -11,4 +11,11 @@
 
   <artifactId>laokou-mqtt-domain</artifactId>
 
+  <dependencies>
+    <dependency>
+      <groupId>org.laokou</groupId>
+      <artifactId>laokou-mqtt-client</artifactId>
+    </dependency>
+  </dependencies>
+
 </project>
