--- a/laokou-service/laokou-mqtt/laokou-mqtt-start/pom.xml
+++ b/laokou-service/laokou-mqtt/laokou-mqtt-start/pom.xml
@@ -11,4 +11,17 @@
 
   <artifactId>laokou-mqtt-start</artifactId>
 
+  <dependencies>
+    <dependency>
+      <groupId>org.laokou</groupId>
+      <artifactId>laokou-mqtt-adapter</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.laokou</groupId>
+      <artifactId>laokou-common-test</artifactId>
+      <scope>test</scope>
+      <optional>true</optional>
+    </dependency>
+  </dependencies>
+
 </project>
