--- a/doc/deploy/docker-compose/docker-compose.yml
+++ b/doc/deploy/docker-compose/docker-compose.yml
@@ -210,7 +210,7 @@ services:
       - ./tdengine/logs:/var/log/taos
     networks:
       - laokou_network
-  # docker部署 => sudo docker run -d --name emqx  --restart always --network bridge -v /home/ubuntu/emqx/etc:/etc/emqx:rw -v /home/ubuntu/emqx/data:/opt/emqx/data:rw -v /home/ubuntu/emqx/log:/opt/emqx/log:rw -p 1883:1883 -p 8083:8083 -p 8084:8084 -p 8883:8883 -p 18083:18083 emqx/emqx:5.8.6
+  # docker部署 => sudo docker run -d --name emqx  --restart always --network bridge -v /home/ubuntu/emqx/data:/opt/emqx/data:rw -v /home/ubuntu/emqx/log:/opt/emqx/log:rw -p 1883:1883 -p 8083:8083 -p 8084:8084 -p 8883:8883 -p 18083:18083 emqx/emqx:5.8.6
   emqx:
     image: emqx/emqx:5.4.1
     container_name: emqx
@@ -279,6 +279,9 @@ services:
     privileged: true
     networks:
       - laokou_network
+  # bin/kafka-topics.sh --bootstrap-server 127.0.0.1:9092 --create --topic laokou-property-report --partitions 3 --replication-factor 1
+  # bin/kafka-topics.sh --bootstrap-server 127.0.0.1:9092 --create --topic laokou-property-reply --partitions 3 --replication-factor 1
+  # bin/kafka-topics.sh --bootstrap-server 127.0.0.1:9092 --create --topic laokou-event-report --partitions 3 --replication-factor 1
   kafka:
     image: bitnami/kafka:4.0.0
     container_name: kafka
