--- a/laokou-common/laokou-common-network/laokou-common-network-mqtt-client/pom.xml
+++ b/laokou-common/laokou-common-network/laokou-common-network-mqtt-client/pom.xml
@@ -34,10 +34,26 @@
       <artifactId>laokou-common-test</artifactId>
       <scope>test</scope>
       <optional>true</optional>
+      <exclusions>
+          <exclusion>
+              <groupId>org.wiremock</groupId>
+              <artifactId>wiremock</artifactId>
+          </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-logging</artifactId>
+      <scope>test</scope>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>org.laokou</groupId>
+      <artifactId>laokou-common-kafka</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-tomcat</artifactId>
       <scope>test</scope>
       <optional>true</optional>
     </dependency>
