--- a/laokou-service/laokou-logstash/laokou-logstash-start/src/main/resources/application.yml
+++ b/laokou-service/laokou-logstash/laokou-logstash-start/src/main/resources/application.yml
@@ -58,7 +58,7 @@ spring:
     consumer:
       group-id: laokou_trace_consumer_group
       # 禁用自动提交（按周期）已消费offset
-      enable-auto-commit: false
+      enable-auto-commit: true
       # 单次poll()调用返回的记录数
       max-poll-records: 50
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
@@ -66,7 +66,7 @@ spring:
     producer:
       # 发生错误后，消息重发的次数。
       retries: 5
-      #当有多个消息需要被发送到同一个分区时，生产者会把它们放在同一个批次里。该参数指定了一个批次可以使用的内存大小，按照字节数计算。
+      # 当有多个消息需要被发送到同一个分区时，生产者会把它们放在同一个批次里。该参数指定了一个批次可以使用的内存大小，按照字节数计算。
       batch-size: 16384
       # 设置生产者内存缓冲区的大小。
       buffer-memory: 33554432
@@ -81,14 +81,16 @@ spring:
     listener:
       # 在侦听器容器中运行的线程数。
       concurrency: 5
-      # listner负责ack，每调用一次，就立即commit
-      ack-mode: manual
+      # 批量提交模式
+      ack-mode: batch
       # 批量batch类型
       type: batch
       # topic不存在报错
       missing-topics-fatal: false
+    admin:
+      auto-create: false
   cloud:
-    # loadbalancer
+    # Loadbalancer配置
     loadbalancer:
       nacos:
         enabled: true
