--- a/laokou-service/laokou-mqtt/laokou-mqtt-infrastructure/pom.xml
+++ b/laokou-service/laokou-mqtt/laokou-mqtt-infrastructure/pom.xml
@@ -46,6 +46,10 @@
       <groupId>org.laokou</groupId>
       <artifactId>laokou-common-log4j2</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.laokou</groupId>
+      <artifactId>laokou-common-network-mqtt-client</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
