--- a/doc/deploy/docker-compose/docker-compose.yml
+++ b/doc/deploy/docker-compose/docker-compose.yml
@@ -279,9 +279,9 @@ services:
     privileged: true
     networks:
       - laokou_network
-  # bin/kafka-topics.sh --bootstrap-server 127.0.0.1:9092 --create --topic laokou-property-report --partitions 3 --replication-factor 1
-  # bin/kafka-topics.sh --bootstrap-server 127.0.0.1:9092 --create --topic laokou-property-reply --partitions 3 --replication-factor 1
-  # bin/kafka-topics.sh --bootstrap-server 127.0.0.1:9092 --create --topic laokou-event-report --partitions 3 --replication-factor 1
+  # kafka-topics.sh --bootstrap-server 127.0.0.1:9092 --create --topic laokou_property_report --partitions 3 --replication-factor 1
+  # kafka-topics.sh --bootstrap-server 127.0.0.1:9092 --create --topic laokou_property_reply --partitions 3 --replication-factor 1
+  # kafka-topics.sh --bootstrap-server 127.0.0.1:9092 --create --topic laokou_event_report --partitions 3 --replication-factor 1
   kafka:
     image: bitnami/kafka:4.0.0
     container_name: kafka
