feat: 增加负载均衡接口

--- a/laokou-service/laokou-mqtt/laokou-mqtt-start/src/main/resources/application.yml
+++ b/laokou-service/laokou-mqtt/laokou-mqtt-start/src/main/resources/application.yml
@@ -13,8 +13,8 @@ server:
     key-store-password: laokou
   http2:
     enabled: @SSL-ENABLED@
-  forward-headers-strategy: framework
   shutdown: graceful
+  forward-headers-strategy: native
 
 spring:
   application:
