--- a/laokou-common/laokou-common-trace/pom.xml
+++ b/laokou-common/laokou-common-trace/pom.xml
@@ -68,6 +68,11 @@
             <groupId>io.prometheus</groupId>
             <artifactId>prometheus-metrics-tracer-common</artifactId>
         </dependency>
+      <dependency>
+        <groupId>io.projectreactor</groupId>
+        <artifactId>reactor-core</artifactId>
+        <optional>true</optional>
+      </dependency>
     </dependencies>
 
 </project>
