--- a/laokou-service/laokou-mqtt/laokou-mqtt-domain/pom.xml
+++ b/laokou-service/laokou-mqtt/laokou-mqtt-domain/pom.xml
@@ -16,6 +16,10 @@
       <groupId>org.laokou</groupId>
       <artifactId>laokou-mqtt-client</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.laokou</groupId>
+      <artifactId>laokou-common-algorithm</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
