--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -56,6 +56,7 @@ jobs:
             ./laokou-service/laokou-logstash/laokou-logstash-start/target/site/jacoco/jacoco.xml,
             ./laokou-service/laokou-auth/laokou-auth-domain/target/site/jacoco/jacoco.xml,
             ./laokou-service/laokou-auth/laokou-auth-app/target/site/jacoco/jacoco.xml,
+            ./laokou-service/laokou-iot/laokou-iot-start/target/site/jacoco/jacoco.xml,
             ./laokou-service/laokou-distributed-identifier/laokou-distributed-identifier-start/target/site/jacoco/jacoco.xml
           token: ${{ secrets.CODECOV_TOKEN }}
       - name: Build with Maven
