--- a/laokou-common/laokou-common-bom/pom.xml
+++ b/laokou-common/laokou-common-bom/pom.xml
@@ -183,8 +183,8 @@
     <wiremock.version>4.0.0-beta.4</wiremock.version>
     <!--commons-net版本-->
     <commons-net.version>3.11.1</commons-net.version>
-    <!--vertx-mqtt版本-->
-    <vertx-mqtt.version>4.5.14</vertx-mqtt.version>
+    <!--vertx版本-->
+    <vertx.version>4.5.14</vertx.version>
     <!--springdoc-openapi版本-->
     <springdoc-openapi.version>2.8.8</springdoc-openapi.version>
   </properties>
@@ -192,6 +192,36 @@
   <!-- 定义全局jar版本,模块使用需要再次引入但不用写版本号 -->
   <dependencyManagement>
     <dependencies>
+      <dependency>
+        <groupId>org.laokou</groupId>
+        <artifactId>laokou-http-adapter</artifactId>
+        <version>${laokou.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.laokou</groupId>
+        <artifactId>laokou-http-app</artifactId>
+        <version>${laokou.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.laokou</groupId>
+        <artifactId>laokou-http-client</artifactId>
+        <version>${laokou.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.laokou</groupId>
+        <artifactId>laokou-http-domain</artifactId>
+        <version>${laokou.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.laokou</groupId>
+        <artifactId>laokou-http-infrastructure</artifactId>
+        <version>${laokou.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.laokou</groupId>
+        <artifactId>laokou-http-start</artifactId>
+        <version>${laokou.version}</version>
+      </dependency>
       <dependency>
         <groupId>org.laokou</groupId>
         <artifactId>laokou-mqtt-adapter</artifactId>
@@ -235,7 +265,12 @@
       <dependency>
         <groupId>io.vertx</groupId>
         <artifactId>vertx-mqtt</artifactId>
-        <version>${vertx-mqtt.version}</version>
+        <version>${vertx.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.vertx</groupId>
+        <artifactId>vertx-web</artifactId>
+        <version>${vertx.version}</version>
       </dependency>
       <dependency>
         <groupId>commons-net</groupId>
